--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,71 +16,159 @@
             <h5>Discover a management tool solution that can help your business succeed.....</h5>
         </div>
         <div class="login_side">
-            <div class="login">
-                
-                    <button onclick="document.getElementById('id01').style.display='block'"
-                        class="start">Log-in</button>
-                    <div id="id01" class="modal">
-                        <span onclick="document.getElementById('id01').style.display='none'" class="close"
-                            title="Close Modal">&times;</span>
-                        <form class="modal-content animate" action="" method="POST" target="_top">
-                            <div class="imgcontainer">
-                                <img src="user.jpeg" alt="avatar" class="avatar">
-                            </div>
-                            <div class="container">
-                                <label for="uname"><b>Username</b></label>
-                                <input type="text" placeholder="Enter userename" id="uname" name="uname" required>
-                                <label for="psw"><b>Password</b></label>
-                                <input type="password" placeholder="Enter Password" id="psw" name="psw" required>
-                                <button class="logbut" type="submit"><a href="http://localhost/project%20management%20tools/home.html" target="_blank">Login</button></a>
-                                <label>
-                                    <input type="checkbox" checked="checked" name="remeber"> Remember me
-                                </label>
-                            </div>
-                            <div class="container1" style="background-color:#f1f1f1">
-                                <button type="button" onclick="document.getElementById('id01').style.display='none'"
-                                    class="cancelbtn">Cancel</button>
-                                <span class="psw"><a href="#">Forgot password</a>
-                                </span>
-                            </div>
-                        </form>
-                    </div>
+            
+            <div class="signup">
+                <button onclick="document.getElementById('id02').style.display='block'" class="start">Sign-up</button>
+                <div id="id02" class="modal">
+                    <span onclick="document.getElementById('id02').style.display='none'" class="close"
+                        title="Close Modal">&times;</span>
+                    <form class="modal-content animate "  method="post" action="#" enctype="multipart/form-data">
+                        <div class="imgcontainer">
+                            <img src="user.jpeg" alt="avatar" class="avatar">
+                        </div>
+                        <div class="container">
+                            <!-- <label for="fname"><b>Full Name</b></label>
+                            <input type="text" placeholder="Enter full Name" name="fname" id="fname" required> -->
+                            <label for="email"><b>E-mail</b></label>
+                            <input type="text" placeholder="Enter e-mail" name="email" id="email" required>
+                            <label for="password"><b>Password</b></label>
+                            <input type="password" placeholder="Enter Password" name="password" id="password" required>
+                            <button  type="button" id="register" name="register" class="logbut">Sign-up</button>
+                            <label>
+                                <input type="checkbox" checked="checked" name="remeber"> Remember me
+                            </label>
+                        </div>
+                        <div class="container1" style="background-color:#f1f1f1">
+                            <button type="button" onclick="document.getElementById('id02').style.display='none'"
+                                class="cancelbtn">Cancel</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="signup">
-                    <button onclick="document.getElementById('id02').style.display='block'"
-                        class="start">Sign-up</button>
-                    <div id="id02" class="modal">
-                        <span onclick="document.getElementById('id02').style.display='none'" class="close"
-                            title="Close Modal">&times;</span>
-                        <form class="modal-content animate" action="connect1.php" method="POST" target="_top">
-                            <div class="imgcontainer">
-                                <img src="user.jpeg" alt="avatar" class="avatar">
-                            </div>
-                            <div class="container">
-                                <label for="fname"><b>Full Name</b></label>
-                                <input type="text" placeholder="Enter full Name" name="fname"  id ="fname" required>
-                                <label for="uname"><b>Username</b></label>
-                                <input type="text" placeholder="Enter userename" name="uname" id ="uname" required>
-                                <label for="psw"><b>Password</b></label>
-                                <input type="password" placeholder="Enter Password" name="psw" id="psw"  required>
-                                <label for="psw"><b>Confirm Password</b></label>
-                                <input type="password" placeholder="Confirm password" name="psw1" id="psw1" required>
-                                <a href="http://localhost/project%20management%20tools/home.html" target="_blank"> <button class="logbut" type="submit"><a href="http://localhost/project%20management%20tools/home.html" target="_blank">Sign-up</a></button></a>
-                                <label>
-                                    <input type="checkbox" checked="checked" name="remeber"> Remember me
-                                </label>
-                            </div>
-                            <div class="container1" style="background-color:#f1f1f1">
-                                <button type="button" onclick="document.getElementById('id02').style.display='none'"
-                                    class="cancelbtn">Cancel</button>
-                            </div>
-                        </form>
-                    </div>
+            </div>
+            <div class="login">
+                <button onclick="document.getElementById('id01').style.display='block'" class="start">Log-in</button>
+                <div id="id01" class="modal">
+                    <span onclick="document.getElementById('id01').style.display='none'" class="close"
+                        title="Close Modal">&times;</span>
+                    <form class="modal-content animate" method="post" action="#" enctype="multipart/form-data">
+                        <div class="imgcontainer">
+                            <img src="user.jpeg" alt="avatar" class="avatar" >
+                        </div>
+                        <div class="container">
+                            <label for="email"><b>E-mail</b></label>
+                            <input type="text" placeholder="Enter e-mail" id="login_email" name="login_email" required>
+                            <label for="password"><b>Password</b></label>
+                            <input type="password" placeholder="Enter Password" id="login_password"
+                                name="login_password" required>
+                            <button class="logbut" type="button" id="login1" name="login1" >Login</button>
+                            <label>
+                                <input type="checkbox" checked="checked" name="remeber"> Remember me
+                            </label>
+                        </div>
+                        <div class="container1" style="background-color:#f1f1f1">
+                            <button type="button" onclick="document.getElementById('id01').style.display='none'"
+                                class="cancelbtn">Cancel</button>
+                            <span class="password"><a href="#">Forgot password</a>
+                            </span>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
+    </div>
 </body>
-<script src="script.js"></script>
+<!-- <script src="script.js"></script> -->
+<script src="script1.js"></script>
+<script type="module">
+	// Import the functions you need from the SDKs you need
+	import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js";
+	import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-analytics.js";
+	import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-auth.js";
+	// TODO: Add SDKs for Firebase products that you want to use
+	// https://firebase.google.com/docs/web/setup#available-libraries
 
+	// Your web app's Firebase configuration
+	// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+	const firebaseConfig = {
+		apiKey: "AIzaSyBqyYXndru5uVI60tp6eu3A1A7Jho-1Fys",
+		authDomain: "login-auth-7a8b9.firebaseapp.com",
+		databaseURL: "https://login-auth-7a8b9-default-rtdb.firebaseio.com",
+		projectId: "login-auth-7a8b9",
+		storageBucket: "login-auth-7a8b9.appspot.com",
+		messagingSenderId: "786370328154",
+		appId: "1:786370328154:web:75193de1d672e27e700a63"
+	};
+	// Initialize Firebase
+	const app = initializeApp(firebaseConfig);
+	const analytics = getAnalytics(app);
+	const auth = getAuth();
+	console.log(app);
+
+
+
+	//----- New Registration code start
+
+    document.addEventListener("DOMContentLoaded", function () {
+	document.getElementById("register").addEventListener("click", function () {
+		var email = document.getElementById("email").value;
+		var password = document.getElementById("password").value;
+        window.location.href = "home.html";
+		//For new registration
+		createUserWithEmailAndPassword(auth, email, password)
+			.then((userCredential) => {
+				// Signed in
+				const user = userCredential.user;
+				console.log(user);
+				alert("Registration successfully!!");
+				// ...
+			})
+			.catch((error) => {
+				const errorCode = error.code;
+				const errorMessage = error.message;
+				// ..
+				console.log(errorMessage);
+				alert(error);
+			});
+	});
+	//----- End
+	//----- Login code start
+	document.getElementById("login1").addEventListener("click", function () {
+		var email = document.getElementById("login_email").value;
+		var password = document.getElementById("login_password").value;
+        window.location.href = "home.html";
+
+		signInWithEmailAndPassword(auth, email, password)
+			.then((userCredential) => {
+				// Signed in
+				const user = userCredential.user;
+				console.log(user);
+				alert(user.email + " Login successfully!!!");
+				//document.getElementById('logout').style.display = 'block';
+				// ...
+			})
+			.catch((error) => {
+				const errorCode = error.code;
+				const errorMessage = error.message;
+				console.log(errorMessage);
+				alert(errorMessage);
+			});
+	});
+});
+
+    // document.getElementById("logout").addEventListener("click", function() {
+	// 	  signOut(auth).then(() => {
+	// 		  // Sign-out successful.
+	// 		  console.log('Sign-out successful.');
+	// 		  alert('Sign-out successful.');
+	// 		  document.getElementById('logout').style.display = 'none';
+	// 		}).catch((error) => {
+	// 		  // An error happened.
+	// 		  console.log('An error happened.');
+	// 		});
+	//   });
+
+
+
+    </script>
 </html>
