--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <h5>Discover a management tool solution that can help your business succeed.....</h5>
         </div>
         <div class="login_side">
-            
+
             <div class="signup">
                 <button onclick="document.getElementById('id02').style.display='block'" class="start">Sign-up</button>
                 <div id="id02" class="modal">
                     <span onclick="document.getElementById('id02').style.display='none'" class="close"
                         title="Close Modal">&times;</span>
-                    <form class="modal-content animate "  method="post" action="#" enctype="multipart/form-data">
+                    <form class="modal-content animate " method="post" action="#" enctype="multipart/form-data">
                         <div class="imgcontainer">
                             <img src="user.jpeg" alt="avatar" class="avatar">
                         </div>
@@ -33,7 +33,7 @@
                             <input type="text" placeholder="Enter e-mail" name="email" id="email" required>
                             <label for="password"><b>Password</b></label>
                             <input type="password" placeholder="Enter Password" name="password" id="password" required>
-                            <button  type="button" id="register" name="register" class="logbut">Sign-up</button>
+                            <button type="button" id="register" name="register" class="logbut">Sign-up</button>
                             <label>
                                 <input type="checkbox" checked="checked" name="remeber"> Remember me
                             </label>
@@ -52,7 +52,7 @@
                         title="Close Modal">&times;</span>
                     <form class="modal-content animate" method="post" action="#" enctype="multipart/form-data">
                         <div class="imgcontainer">
-                            <img src="user.jpeg" alt="avatar" class="avatar" >
+                            <img src="user.jpeg" alt="avatar" class="avatar">
                         </div>
                         <div class="container">
                             <label for="email"><b>E-mail</b></label>
@@ -60,7 +60,7 @@
                             <label for="password"><b>Password</b></label>
                             <input type="password" placeholder="Enter Password" id="login_password"
                                 name="login_password" required>
-                            <button class="logbut" type="button" id="login1" name="login1" >Login</button>
+                            <button class="logbut" type="button" id="login1" name="login1">Login</button>
                             <label>
                                 <input type="checkbox" checked="checked" name="remeber"> Remember me
                             </label>
@@ -80,95 +80,121 @@
 </body>
 <!-- <script src="script.js"></script> -->
 <script src="script1.js"></script>
+<!-- <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-database.js"></script>  -->
+
 <script type="module">
-	// Import the functions you need from the SDKs you need
-	import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js";
-	import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-analytics.js";
-	import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-auth.js";
-	// TODO: Add SDKs for Firebase products that you want to use
-	// https://firebase.google.com/docs/web/setup#available-libraries
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-analytics.js";
+    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-auth.js";
+    import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-database.js";
 
-	// Your web app's Firebase configuration
-	// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-	const firebaseConfig = {
-		apiKey: "AIzaSyBqyYXndru5uVI60tp6eu3A1A7Jho-1Fys",
-		authDomain: "login-auth-7a8b9.firebaseapp.com",
-		databaseURL: "https://login-auth-7a8b9-default-rtdb.firebaseio.com",
-		projectId: "login-auth-7a8b9",
-		storageBucket: "login-auth-7a8b9.appspot.com",
-		messagingSenderId: "786370328154",
-		appId: "1:786370328154:web:75193de1d672e27e700a63"
-	};
-	// Initialize Firebase
-	const app = initializeApp(firebaseConfig);
-	const analytics = getAnalytics(app);
-	const auth = getAuth();
-	console.log(app);
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+        apiKey: "AIzaSyBqyYXndru5uVI60tp6eu3A1A7Jho-1Fys",
+        authDomain: "login-auth-7a8b9.firebaseapp.com",
+        databaseURL: "https://login-auth-7a8b9-default-rtdb.firebaseio.com",
+        projectId: "login-auth-7a8b9",
+        storageBucket: "login-auth-7a8b9.appspot.com",
+        messagingSenderId: "786370328154",
+        appId: "1:786370328154:web:75193de1d672e27e700a63"
+    };
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+    const auth = getAuth();
+    const database = getDatabase();
+    console.log(app);
 
 
 
-	//----- New Registration code start
+    //----- New Registration code start
 
     document.addEventListener("DOMContentLoaded", function () {
-	document.getElementById("register").addEventListener("click", function () {
-		var email = document.getElementById("email").value;
-		var password = document.getElementById("password").value;
-        window.location.href = "home.html";
-		//For new registration
-		createUserWithEmailAndPassword(auth, email, password)
-			.then((userCredential) => {
-				// Signed in
-				const user = userCredential.user;
-				console.log(user);
-				alert("Registration successfully!!");
-				// ...
-			})
-			.catch((error) => {
-				const errorCode = error.code;
-				const errorMessage = error.message;
-				// ..
-				console.log(errorMessage);
-				alert(error);
-			});
-	});
-	//----- End
-	//----- Login code start
-	document.getElementById("login1").addEventListener("click", function () {
-		var email = document.getElementById("login_email").value;
-		var password = document.getElementById("login_password").value;
-        window.location.href = "home.html";
+        document.getElementById("register").addEventListener("click", function () {
+            var email = document.getElementById("email").value;
+            var password = document.getElementById("password").value;
 
-		signInWithEmailAndPassword(auth, email, password)
-			.then((userCredential) => {
-				// Signed in
-				const user = userCredential.user;
-				console.log(user);
-				alert(user.email + " Login successfully!!!");
-				//document.getElementById('logout').style.display = 'block';
-				// ...
-			})
-			.catch((error) => {
-				const errorCode = error.code;
-				const errorMessage = error.message;
-				console.log(errorMessage);
-				alert(errorMessage);
-			});
-	});
-});
+            //For new registration
+            createUserWithEmailAndPassword(auth, email, password)
+                .then((userCredential) => {
+                    // Signed in
+                    const user = userCredential.user;
+                    console.log(user);
+                    const usersRef = ref(database , 'users/' + user.uid);
+                    set(usersRef, {
+                        email: user.email,
+                        //password: user.password,
+
+                    }).then(() => {
+                        console.log('Data saved successfully!');
+                        alert('saved');
+                    }).catch((error) => {
+                        console.error('Error writing document: ', error);
+                    });
+
+                    alert("Registration successfully!!");
+                    window.location.href = "home.html";
+                })
+                .catch((error) => {
+                    const errorCode = error.code;
+                    const errorMessage = error.message;
+                    // ..
+                    console.log(errorMessage);
+                    alert(error);
+                });
+        });
+        //----- End
+        //----- Login code start
+        document.getElementById("login1").addEventListener("click", function () {
+            var email = document.getElementById("login_email").value;
+            var password = document.getElementById("login_password").value;
+
+
+            signInWithEmailAndPassword(auth, email, password)
+                .then((userCredential) => {
+                    // Signed in
+                    const user = userCredential.user;
+                    console.log(user);
+                    alert(user.email + " Login successfully!!!");
+                    const userRef = ref(database, 'users/' + user.uid);
+                    get(userRef).then((snapshot) => {
+                        if (snapshot.exists()) {
+                            const userData = snapshot.val();
+                            console.log('User Data:', userData);
+                        }
+                    });
+                    window.location.href = "home.html";
+                    //document.getElementById('logout').style.display = 'block';
+                    // ...
+                })
+                .catch((error) => {
+                    const errorCode = error.code;
+                    const errorMessage = error.message;
+                    console.log(errorMessage);
+                    alert(errorMessage);
+                });
+        });
+    });
 
     // document.getElementById("logout").addEventListener("click", function() {
-	// 	  signOut(auth).then(() => {
-	// 		  // Sign-out successful.
-	// 		  console.log('Sign-out successful.');
-	// 		  alert('Sign-out successful.');
-	// 		  document.getElementById('logout').style.display = 'none';
-	// 		}).catch((error) => {
-	// 		  // An error happened.
-	// 		  console.log('An error happened.');
-	// 		});
-	//   });
+    // 	  signOut(auth).then(() => {
+    // 		  // Sign-out successful.
+    // 		  console.log('Sign-out successful.');
+    // 		  alert('Sign-out successful.');
+    // 		  document.getElementById('logout').style.display = 'none';
+    // 		}).catch((error) => {
+    // 		  // An error happened.
+    // 		  console.log('An error happened.');
+    // 		});
+    //   });
 
 
 
-    </script>
+</script>
+
 </html>
