--- a/public/new.html
+++ b/public/new.html
@@ -1,174 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login page</title>
-    <link rel="stylesheet" href="styles1.css">
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" /> -->
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-    <div class="main">
-        <div class="logo_side">
-            <img src="logo.png" alt="">
-            <h5>Discover a management tool solution that can help your business succeed.....</h5>
-        </div>
-        <div class="login_side">
-            <div class="login">
-
-                <button onclick="document.getElementById('id01').style.display='block'" class="start">Log-in</button>
-                <div id="id01" class="modal">
-                    <span onclick="document.getElementById('id01').style.display='none'" class="close"
-                        title="Close Modal">&times;</span>
-                    <form class="modal-content animate" action="" method="POST" target="_top">
-                        <div class="imgcontainer">
-                            <img src="user.jpeg" alt="avatar" class="avatar">
-                        </div>
-                        <div class="container">
-                            <label for="email"><b>E-mail</b></label>
-                            <input type="text" placeholder="Enter e-mail" id="login_email" name="login_email" required>
-                            <label for="password"><b>Password</b></label>
-                            <input type="password" placeholder="Enter Password" id="login_password" name="login_password" required>
-                            <button class="logbut" type="submit" id="login" name="login" >Login</button>
-                            <label>
-                                <input type="checkbox" checked="checked" name="remeber"> Remember me
-                            </label>
-                        </div>
-                        <div class="container1" style="background-color:#f1f1f1">
-                            <button type="button"
-                                onclick="document.getElementById('id01').style.display='none'"
-                                class="cancelbtn">Cancel</button>
-                            <span class="password"><a href="#">Forgot password</a>
-                            </span>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="signup">
-                <button onclick="document.getElementById('id02').style.display='block'" class="start">Sign-up</button>
-                <div id="id02" class="modal">
-                    <span onclick="document.getElementById('id02').style.display='none'" class="close"
-                        title="Close Modal">&times;</span>
-                    <form class="modal-content animate" action="" method="POST">
-                        <div class="imgcontainer">
-                            <img src="user.jpeg" alt="avatar" class="avatar">
-                        </div>
-                        <div class="container">
-                            <!-- <label for="fname"><b>Full Name</b></label>
-                            <input type="text" placeholder="Enter full Name" name="fname" id="fname" required> -->
-                            <label for="email"><b>E-mail</b></label>
-                            <input type="text" placeholder="Enter e-mail" name="email" id="email" required>
-                            <label for="password"><b>Password</b></label>
-                            <input type="password" placeholder="Enter Password" name="password" id="password" required>
-                            <button class="logbut" type="submit" id="register" name="register">Sign-up</button>
-                            <label>
-                                <input type="checkbox" checked="checked" name="remeber"> Remember me
-                            </label>
-                        </div>
-                        <div class="container1" style="background-color:#f1f1f1">
-                            <button type="button"
-                                onclick="document.getElementById('id02').style.display='none'"
-                                class="cancelbtn">Cancel</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
+    <h2>hee
+        
+    </h2>
 </body>
-<script src="script.js"></script>
-<script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-auth.js";
-
-    // Your web app's Firebase configuration
-    const firebaseConfig = {
-        apiKey: "AIzaSyBqyYXndru5uVI60tp6eu3A1A7Jho-1Fys",
-        authDomain: "login-auth-7a8b9.firebaseapp.com",
-        databaseURL: "https://login-auth-7a8b9-default-rtdb.firebaseio.com",
-        projectId: "login-auth-7a8b9",
-        storageBucket: "login-auth-7a8b9.appspot.com",
-        messagingSenderId: "786370328154",
-        appId: "1:786370328154:web:75193de1d672e27e700a63"
-    };
-
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth();
-
-    document.getElementById("register").addEventListener("click", function () {
-        var fname = document.getElementById("fname").value;
-        var email = document.getElementById("email").value;
-        var password = document.getElementById("password").value;
-        //For new registration
-        createUserWithEmailAndPassword(auth,fname, email, password)
-            .then((userCredential) => {
-                // Signed in
-                const user = userCredential.user;
-                console.log(user);
-                alert("Registration successfully!!");
-                // ...
-            })
-            .catch((error) => {
-                const errorCode = error.code;
-                const errorMessage = error.message;
-                // ..
-                console.log(errorMessage);
-                alert(error);
-            });
-    });
-    document.getElementById("login").addEventListener("click", function() {
-		  var email =  document.getElementById("login_email").value;
-		  var password = document.getElementById("login_password").value;
-
-		  signInWithEmailAndPassword(auth, email, password)
-		  .then((userCredential) => {
-		    // Signed in
-		    const user = userCredential.user;
-		    console.log(user);
-		    alert(user.email+" Login successfully!!!");
-		    //document.getElementById('logout').style.display = 'block';
-		    // ...
-		  })
-		  .catch((error) => {
-		    const errorCode = error.code;
-		    const errorMessage = error.message;
-		    console.log(errorMessage);
-		    alert(errorMessage);
-		  });
-	  });
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    console.log(app);
-</script>
-
-
 </html>
