--- a/public/home.html
+++ b/public/home.html
@@ -68,7 +68,6 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js";
         import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-auth.js";
         import { getDatabase, ref, push, set, get } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-database.js";
-
         // Firebase configuration
         const firebaseConfig = {
             apiKey: "AIzaSyBqyYXndru5uVI60tp6eu3A1A7Jho-1Fys",
@@ -79,12 +78,10 @@
             messagingSenderId: "786370328154",
             appId: "1:786370328154:web:75193de1d672e27e700a63"
         };
-
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const database = getDatabase(app);
-
         document.addEventListener("DOMContentLoaded", function () {
             auth.onAuthStateChanged(function (user) {
                 if (user) {
@@ -101,7 +98,6 @@
                 logout();
             });
         });
-
         function setupProjectForm(user) {
             const projectForm = document.getElementById("project-form");
             projectForm.addEventListener("submit", function (e) {
@@ -110,16 +106,13 @@
                 verifyAssignedUser(assignedUserEmail, user, projectForm);
             });
         }
-
         // Function to verify the assigned user and submit the project
         function verifyAssignedUser(email, user, projectForm) {
             if (!user) {
                 console.error("User is not authenticated.");
                 return;
             }
-
             const usersRef = ref(database, 'users');
-
             get(usersRef)
                 .then((snapshot) => {
                     if (snapshot.exists()) {
@@ -138,7 +131,6 @@
                                 const projectName = projectForm.elements.project.value;
                                 const assignTask = projectForm.elements.assigntask.value;
                                 const priority = projectForm.querySelector('input[name="priority"]:checked').value;
-
                                 const projectsRef = ref(database, 'projects');
                                 const newProjectRef = push(projectsRef);
                                 set(newProjectRef, {
@@ -168,7 +160,44 @@
                     console.error("Error fetching user data: " + error.message);
                 });
         }
+        function displayUserProjects(userEmail) {
+            const projectsRef = ref(database, 'projects');
 
+            get(projectsRef)
+                .then((snapshot) => {
+                    if (snapshot.exists()) {
+                        const projectData = snapshot.val();
+                        if (projectData) {
+                            let projectsHTML = "";
+
+                            for (const projectId in projectData) {
+                                const project = projectData[projectId];
+                                if (project.assignUser === userEmail) {
+                                    projectsHTML += `
+                                        <p>Project Name: ${project.projectName}</p>
+                                        <p>Priority: ${project.priority}</p>
+                                        <p>Assigned Task: ${project.assignTask}</p>
+                                        <hr>
+                                    `;
+                                }
+                            }
+
+                            if (projectsHTML !== "") {
+                                document.querySelector(".project-details").innerHTML = projectsHTML;
+                            } else {
+                                document.querySelector(".project-details").innerHTML = "No projects found for this user.";
+                            }
+                        } else {
+                            document.querySelector(".project-details").innerHTML = "No projects found for this user.";
+                        }
+                    } else {
+                        document.querySelector(".project-details").innerHTML = "No projects found for this user.";
+                    }
+                })
+                .catch((error) => {
+                    console.error("Error fetching project data: " + error.message);
+                });
+        }
         // Function to log out
         function logout() {
             auth.signOut().then(function () {
@@ -178,5 +207,6 @@
                 console.error("Error logging out: " + error.message);
             });
         }
+        
     </script>
 </html>
