--- a/public/home.html
+++ b/public/home.html
@@ -28,7 +28,7 @@
             <img src="logo.png" alt="logo">
         </div>
         <div class="user">
-            <button onclick="document.getElementById('id03').style display='block'" class="btn1" id="info" name="info">
+            <button onclick="document.getElementById('id03').style.display='block'" class="btn1" id="info" name="info">
                 <span class="material-symbols-outlined">account_circle</span>
             </button>
             <div id="user-email"></div> <!-- This is where the user's email will be displayed -->
