--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
             <div class="login">
                 <button onclick="document.getElementById('id01').style.display='block'" class="start">Log-in</button>
                 <div id="id01" class="modal">
-                    <span onclick="document.getElementById('id01').style display='none'" class="close" title="Close Modal">&times;</span>
+                    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
                     <form class="modal-content animate" method="post" action="#" enctype="multipart/form-data">
                         <div class="imgcontainer">
                             <img src="user.jpeg" alt="avatar" class="avatar">
