--- a/public/Assigned task.html
+++ b/public/Assigned task.html
@@ -39,150 +39,138 @@
         <h5>Your Assigned Task</h5>
 
         <div class="project-details">
-
             <!-- Project details will be displayed here -->
         </div>
     </div>
+</body>
+<script src="script1.js"></script>
+<script src="https://kit.fontawesome.com/fd42e4e9fb.js" crossorigin="anonymous"></script>
 
+<script type="module">
+    //import firebase from 'firebase';
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-auth.js";
+    import { getDatabase, ref, get, set, remove, push } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-database.js";
 
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js";
-        import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-auth.js";
-        import { getDatabase, ref, get, set, remove } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-database.js";
+    const firebaseConfig = {
+        apiKey: "AIzaSyBqyYXndru5uVI60tp6eu3A1A7Jho-1Fys",
+        authDomain: "login-auth-7a8b9.firebaseapp.com",
+        databaseURL: "https://login-auth-7a8b9-default-rtdb.firebaseio.com",
+        projectId: "login-auth-7a8b9",
+        storageBucket: "login-auth-7a8b9.appspot.com",
+        messagingSenderId: "786370328154",
+        appId: "1:786370328154:web:75193de1d672e27e700a63"
+    };
 
-        const firebaseConfig = {
-            apiKey: "AIzaSyBqyYXndru5uVI60tp6eu3A1A7Jho-1Fys",
-            authDomain: "login-auth-7a8b9.firebaseapp.com",
-            databaseURL: "https://login-auth-7a8b9-default-rtdb.firebaseio.com",
-            projectId: "login-auth-7a8b9",
-            storageBucket: "login-auth-7a8b9.appspot.com",
-            messagingSenderId: "786370328154",
-            appId: "1:786370328154:web:75193de1d672e27e700a63"
-        };
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const database = getDatabase(app);
 
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        const database = getDatabase(app);
+    // ... Other code ...
 
-        document.addEventListener("DOMContentLoaded", function () {
-            auth.onAuthStateChanged(function (user) {
-                if (user) {
-                    const email = user.email;
-                    document.getElementById("user-email").textContent = "User Email: " + email;
-                    displayUserProjects(email);
-                } else {
-                    // Redirect to the login page if the user is not authenticated.
-                    window.location.href = 'http://127.0.0.1:5500/index.html';
-                }
+    document.addEventListener("DOMContentLoaded", function () {
+        auth.onAuthStateChanged(function (user) {
+            if (user) {
+                const email = user.email;
+                document.getElementById("user-email").textContent = "User Email: " + email;
+                displayUserProjects(email);
+            } else {
+                // Redirect to the login page if the user is not authenticated.
+                window.location.href = 'http://127.0.0.1:5500/index.html';
+            }
+            document.getElementById('logout').addEventListener("click", function () {
+                logout();
             });
         });
 
-        function displayUserProjects(userEmail) {
-            const projectsRef = ref(database, 'projects');
+        // Add a click event listener to handle project completion
+        document.querySelector(".project-details").addEventListener("click", function (event) {
+            if (event.target.classList.contains("complete-button")) {
+                const projectId = event.target.getAttribute("data-project-id");
+                moveProject(projectId);
+                location.reload();
+            }
+        });
+    });
 
-            // Debugging: Log before fetching data
-            console.log("Fetching project data...");
+    // ... Rest of your code ...
 
-            get(projectsRef)
-                .then((snapshot) => {
-                    // Debugging: Log the snapshot
-                    console.log("Snapshot:", snapshot);
 
-                    if (snapshot.exists()) {
-                        const projectData = snapshot.val();
+    function displayUserProjects(userEmail) {
+        const projectsRef = ref(database, 'projects');
 
-                        if (projectData) {
-                            let projectsHTML = "";
+        get(projectsRef)
+            .then((snapshot) => {
+                if (snapshot.exists()) {
+                    const projectData = snapshot.val();
+                    let projectsHTML = "";
 
-                            for (const projectId in projectData) {
-                                const project = projectData[projectId];
-                                if (project.assignUser === userEmail) {
-                                    projectsHTML += `
+                    for (const projectId in projectData) {
+                        const project = projectData[projectId];
+                        if (project.assignUser === userEmail) {
+                            projectsHTML += `
                                 <p>Project Name: ${project.projectName}</p>
                                 <p>Task: ${project.assignTask}</p>
                                 <p>Priority: ${project.priority}</p>
-                                <button type="button" id="complete" name="complete" data-project-id="${projectId}">Complete</button>
+                                <button class="complete-button" data-project-id="${projectId}">Complete</button>
                                 <hr>
                             `;
-                                }
-                            }
-
-                            if (projectsHTML !== "") {
-                                document.querySelector(".project-details").innerHTML = projectsHTML;
-                            } else {
-                                document.querySelector(".project-details").innerHTML = "No projects found for this user.";
-                            }
-                        } else {
-                            document.querySelector(".project-details").innerHTML = "No projects found for this user.";
                         }
+                    }
+
+                    if (projectsHTML !== "") {
+                        document.querySelector(".project-details").innerHTML = projectsHTML;
                     } else {
-                        console.log("Snapshot does not exist."); // Debugging output
                         document.querySelector(".project-details").innerHTML = "No projects found for this user.";
                     }
-                })
-                .catch((error) => {
-                    console.error("Error fetching project data: " + error.message);
-                });
-        }
-
-        document.addEventListener("click", function (e) {
-            if (e.target && e.target.id === "complete") {
-                // Complete button clicked
-                const projectId = e.target.getAttribute("data-project-id");
-                if (projectId) {
-                    // Handle marking the project as complete
-                    markProjectComplete(projectId);
+                } else {
+                    document.querySelector(".project-details").innerHTML = "No projects found for this user.";
                 }
+            })
+            .catch((error) => {
+                console.error("Error fetching project data: " + error.message);
+            });
+    }
+
+    document.querySelector(".project-details").addEventListener("click", function (event) {
+            if (event.target.classList.contains("complete-button")) {
+                const projectId = event.target.getAttribute("data-project-id");
+                // Update the project status to "completed" in the database
+                markProjectAsCompleted(projectId);
             }
         });
 
-        // ...
-
-function markProjectComplete(projectId) {
-    console.log("Marking project as complete:", projectId);
-
-    const projectRef = ref(database, 'projects/' + projectId);
-
-    get(projectRef)
-        .then((snapshot) => {
-            if (snapshot.exists()) {
-                const projectData = snapshot.val();
-                console.log("Project Data:", projectData);
-
-                const completedProjectsRef = ref(database, 'completed_work');
-
-                set(ref(completedProjectsRef, projectId), projectData)
-                    .then(() => {
-                        remove(projectRef)
-                            .then(() => {
-                                alert("Project marked as complete and moved to 'completed_work'.");
-                                displayUserProjects(userEmail); // Refresh the project list
-                            })
-                            .catch((error) => {
-                                console.error("Error removing project: " + error.message);
-                            });
-                    })
-                    .catch((error) => {
-                        console.error("Error marking project as complete: " + error.message);
-                    });
-            } else {
-                console.error("Project not found.");
-            }
+    function markProjectAsCompleted(projectId) {
+        const projectRef = ref(database, `projects/${projectId}`);
+        
+        // Update the 'status' field in the project to 'completed'
+        set(projectRef, {
+            status: 'completed'
+        }, { merge: true })
+        .then(() => {
+            // Display a success message or update the UI as needed
+            console.log(`Project marked as completed: ${projectId}`);
         })
         .catch((error) => {
-            console.error("Error fetching project data: " + error.message);
+            console.error("Error updating project status: " + error.message);
         });
+    }
+    function moveProject(projectId) {
+    // Implement the logic for moving the project here
+    console.log(`Moving project with ID ${projectId}`);
+    // You can update the project's status, reassign it, or perform any other necessary actions.
 }
+    function logout() {
+        auth.signOut().then(function () {
+            document.getElementById("user-email").textContent = "User Email: Loading...";
+            window.location.href = 'http://127.0.0.1:5500/index.html';
+        }).catch(function (error) {
+            console.error("Error logging out: " + error.message);
+        });
+    }
 
 
-        function logout() {
-            auth.signOut().then(function () {
-                document.getElementById("user-email").textContent = "User Email: Loading...";
-                window.location.href = 'http://127.0.0.1:5500/index.html';
-            }).catch(function (error) {
-                console.error("Error logging out: " + error.message);
-            });
-        }
-    </script>
-    <script src="script1.js"></script>
-    <script src="https://kit.fontawesome.com/fd42e4e9fb.js" crossorigin
+    
+</script>
+
+</html>
