--- a/public/Assigned task.html
+++ b/public/Assigned task.html
@@ -21,7 +21,7 @@
                         <a href="home.html">Assign Work</a>
                     </div>
                 </li>
-                <li><a href="#">Developed by</a></li>
+                <li><a href="devleop.html" target="_blank">Developed by</a></li>
             </ul>
         </div>
         <div class="centre">
@@ -45,7 +45,7 @@
     <footer>
         <a href="#">Privacy Policy</a>
         <a href="#">Contact-us</a>
-        <a href="#">Developed by Harsh</a>
+        <a href="devleop.html" target="_blank">Developed by Harsh</a>
         <p>&copy;2023 Project Management Tool</p>
     </footer>
 </body>
