--- a/public/devleop.html
+++ b/public/devleop.html
@@ -25,9 +25,11 @@
             </div>
             <div class="link">
                 <a href="https://www.linkedin.com/in/harsh-kumar-71a0961a7" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/harshkumar2003" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/harshkumar2003" target="_blank" ><i class="fa-brands fa-github"></i></a>
+                <!--  -->
             </div>
         </div>
+        <!-- footer -->
         <div class="footer">
             <img src="portfolio-1.png" alt="" srcset="">
         </div>
