--- a/public/index.html
+++ b/public/index.html
@@ -68,86 +68,6 @@
     </div>
 </body>
 <script src="script1.js"></script>
-<!-- <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-database.js"></script> -->
-
-<script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-auth.js";
-    import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-database.js";
-
-    const firebaseConfig = {
-        apiKey: "AIzaSyBqyYXndru5uVI60tp6eu3A1A7Jho-1Fys",
-        authDomain: "login-auth-7a8b9.firebaseapp.com",
-        databaseURL: "https://login-auth-7a8b9-default-rtdb.firebaseio.com",
-        projectId: "login-auth-7a8b9",
-        storageBucket: "login-auth-7a8b9.appspot.com",
-        messagingSenderId: "786370328154",
-        appId: "1:786370328154:web:75193de1d672e27e700a63"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const database = getDatabase(app);
-
-    document.addEventListener("DOMContentLoaded", function () {
-        document.getElementById("register").addEventListener("click", function () {
-            var email = document.getElementById("email").value;
-            var password = document.getElementById("password").value;
-
-            createUserWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    console.log(user);
-                    const usersRef = ref(database, 'users/' + user.uid);
-                    set(usersRef, {
-                        email: user.email,
-                    }).then(() => {
-                        console.log('Data saved successfully!');
-                        window.location.href = "home.html";
-                    }).catch((error) => {
-                        console.error('Error writing document: ', error);
-                    });
-
-                    alert("Registration successfully!!");
-                })
-                .catch((error) => {
-                    const errorMessage = error.message;
-                    console.log(errorMessage);
-                    alert(errorMessage);
-                });
-        });
-
-        document.getElementById("login1").addEventListener("click", function () {
-            var email = document.getElementById("login_email").value;
-            var password = document.getElementById("login_password").value;
-
-            signInWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    alert(user.email + " Login successfully!!!");
-                    window.location.href = "home.html";
-                    const dt = new Date();
-                    const userRef = ref(database, 'users/' + user.uid);
-
-                    get(userRef).then((snapshot) => {
-                        if (snapshot.exists()) {
-                            const userData = snapshot.val();
-                            userData.last_login = dt;
-                            console.log('User Data:', userData);
-                            set(userRef, userData); // Update last login time
-                        }
-                    });
-                })
-                .catch((error) => {
-                    const errorMessage = error.message;
-                    console.log(errorMessage);
-                    alert(errorMessage);
-                });
-        });
-    });
-
-</script>
-
+<script type="module" src="firebase.js"></script>
+<script type="module" src="script.js"></script>
 </html>
